# BareSignal

./: CMakeLists.txt  README.md
src/: connection.hpp  signalobject.hpp
test/: CMakeLists.txt  test_basic.cpp
